--- a/examples/index.html
+++ b/examples/index.html
@@ -3,16 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Algorithms and Data structure</title>
   </head>
   <body>
-    <script
-      src="../dist/example/singlyLinkedList.js"
-      type="module"
-    ></script>
+    <script src="../dist/example/singlyLinkedList.js" type="module"></script>
   </body>
 </html>
